# ChangeLog for sci-visualization/gnuplot
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-visualization/gnuplot/ChangeLog,v 1.89 2009/03/02 16:41:40 ranger Exp $

  02 Mar 2009; Brent Baude <ranger@gentoo.org> ChangeLog:
  stable ppc64, bug 259444

  02 Mar 2009; Brent Baude <ranger@gentoo.org> gnuplot-4.2.3-r2.ebuild:
  stable ppc64, bug 259444

  07 Dec 2008; Christian Faulhammer <fauli@gentoo.org>
  -gnuplot-4.2.2-r1.ebuild, -gnuplot-4.2.4.ebuild:
  clean up

  28 Nov 2008; Christian Faulhammer <fauli@gentoo.org> metadata.xml:
  Change my email address

  27 Nov 2008; Ryan Hill <dirtyepic@gentoo.org> gnuplot-4.2.4-r1.ebuild:
  Only call wxwidgets_pkg_setup if USE="wxwindows".

  26 Nov 2008; Ryan Hill <dirtyepic@gentoo.org> gnuplot-4.2.4-r1.ebuild:
  Call wxwidgets_pkg_setup.

  28 Oct 2008; Ulrich Mueller <ulm@gentoo.org> gnuplot-4.2.4.ebuild,
  gnuplot-4.2.4-r1.ebuild:
  Do not build the tutorial with USE=-doc, bug 244693.

*gnuplot-4.2.4-r1 (09 Oct 2008)

  09 Oct 2008; Ulrich Mueller <ulm@gentoo.org> +gnuplot-4.2.4-r1.ebuild:
  Depend on wxGTK 2.8, thanks bicatali and leio.

*gnuplot-4.2.4 (08 Oct 2008)

  08 Oct 2008; Ulrich Mueller <ulm@gentoo.org> +gnuplot-4.2.4.ebuild:
  Version bump. Omit libggi patch since most of it was applied upstream.

  26 Aug 2008; Ulrich Mueller <ulm@gentoo.org>
  +files/gnuplot-4.2.3-disable-texhash.patch, gnuplot-4.2.3-r2.ebuild:
  Disable texhash to prevent sandbox violation, bug 201871 comment 5.

  25 Aug 2008; Ulrich Mueller <ulm@gentoo.org> gnuplot-4.2.3-r2.ebuild:
  Install TeX files in a fixed location, bug 235395.

  31 Jul 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
  Add myself as maintainer.

  04 Jun 2008; Kenneth Prugh <ken69267@gentoo.org> gnuplot-4.2.3-r2.ebuild:
  amd64 stable, bug #224071

  02 Jun 2008; Jeroen Roovers <jer@gentoo.org> gnuplot-4.2.3-r2.ebuild:
  Stable for HPPA (bug #223965).
