@@ -7,7 +7,7 @@ DIST gnuplot-4.2.3.tar.gz 2840611 RMD160 b4692db884c9da2f0d160f33f53c3d2aba65f36
 DIST gnuplot-4.2.4.tar.gz 2904358 RMD160 88acf7561a74116aece627f9b5e41e0726daee75 SHA1 4226b959493a37bc5a1f40a3b165ffd9e1b9d202 SHA256 2a20701410a21307c404a9d10ad9fdf699bb92fa0a919797213208d80b080913
 EBUILD gnuplot-4.2.2-r1.ebuild 5390 RMD160 a57351884a714139e11bfd6bd8255445b7439645 SHA1 fad085f085f449b5f2b02e696bebcc0ece4dd2e5 SHA256 c6116634dc453cf5cca92c17219ed6f200031405dae2a51910d91dc74973cda8
 EBUILD gnuplot-4.2.3-r2.ebuild 5797 RMD160 09aaadd632d81ff487c706197840f989f2580413 SHA1 dba23dd773b9a58df788dd919af963f6a73f199e SHA256 fe53d850f52085c3b8328e8fed98d7052465b29bcb48b5d362612177706b4833
-EBUILD gnuplot-4.2.4-r1.ebuild 5727 RMD160 537008c8deb8ee2d4a4fb745d0362a8e42b29bcc SHA1 d41f948602ce0fc2f20f78bb2d6e2de7604ff08d SHA256 1d9850bb706c32016eba0bde8dfd330f0d4d2d8c11d04252c0d8fe50a449b0b5
+EBUILD gnuplot-4.2.4-r1.ebuild 5730 RMD160 07c7dc83e0289b29b0f1c6bbd93d135ff244ea00 SHA1 90625364180e420529cc4613ae933969f10e21c4 SHA256 71f20b55fde24ee328b3978ed948e7c23f88d4866e45a018a0f82c4874890dc6
 EBUILD gnuplot-4.2.4.ebuild 5754 RMD160 2a80492f9ee6ee44ed11aab948e5551e27b96e6b SHA1 a5b0d616cef2fa9bdd846710242ec53f9e081de9 SHA256 1b09c535753b0fdc288996c742878696014beca0f0bf5d6e1afa3982f5d4ec10
-MISC ChangeLog 19785 RMD160 fde323b9c632aec1d2646c2f23ea3ffdf5284f96 SHA1 192d9a65805948ebb2ce74cd587009382023280d SHA256 4dee6928c1710a9d74038d82c4750601de51e5a5bfc2c7151b6edbe1869f4067
-MISC metadata.xml 276 RMD160 e483cc8bf15032c360e7c83a04c850fe67c915d4 SHA1 7f571a7603bc9d49086f5181aa5f83807abfedec SHA256 9c5313580d15c16ca5683dd218fcbc228528cb4a65d430b37e3f61e7543f54f4
+MISC ChangeLog 19992 RMD160 4ee581f90e8bfd5291ba954b5c875832d31cbbe4 SHA1 d8d4e964a815a983c118eb7c9f1b21fd38590b7f SHA256 8761e6864488526000d930e263d15f22e74e11e6d3f130449a5003f7dc548dac
+MISC metadata.xml 215 RMD160 ec20f35cba71ed779c37faff72797d5162aca3ab SHA1 365b4e7ba49bbe889a7755c256161fcbf1bfd6cd SHA256 3c0405bae8c54a7aa4c92bbb44941fc4243a8474a6209063fa6f24e1c85e8bb6
