@@ -3,9 +3,6 @@
 <pkgmetadata>
 <herd>sci</herd>
 <maintainer>
-  <email>fauli@gentoo.org</email>
-</maintainer>
-<maintainer>
   <email>ulm@gentoo.org</email>
 </maintainer>
 </pkgmetadata>
