@@ -1,6 +1,12 @@
 # ChangeLog for sci-visualization/gnuplot
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-visualization/gnuplot/ChangeLog,v 1.89 2009/03/02 16:41:40 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-visualization/gnuplot/ChangeLog,v 1.91 2009/03/12 23:26:00 fmccor Exp $
+
+  12 Mar 2009; Ferris McCormick <fmccor@gentoo.org> gnuplot-4.2.4-r1.ebuild:
+  Sparc stable, Bug #262327.
+
+  12 Mar 2009; Christian Faulhammer <fauli@gentoo.org> metadata.xml:
+  remove myself as maintainer
 
   02 Mar 2009; Brent Baude <ranger@gentoo.org> ChangeLog:
   stable ppc64, bug 259444
